--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-name: sis_app
-dependencies:
-  - python=3.10
-  - pip
-  - pip:
-      - streamlit
-      - snowflake-snowpark-python
-      - snowflake-connector-python
-      - pandas
-      - altair
+# requirements.txt
+snowflake-snowpark-python
+streamlit
